# cd0309-message-passing-projects-starter

./: .gitignore  LICENSE.md  README.md  Vagrantfile  docker-cmd.md  docker-compose.yml  env-dev  get_helm.sh  notes.md
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: main.yml  manual.yml  nd064-udaconnect-api-docker-image.yml  nd064-udaconnect-app-docker-image.yml  udaconnect-api.yml  udaconnect-app.yml  udaconnect-loc.yml  (+1 more)
argocd/: helm-udaconnect-prod.yaml
db/: 2020-08-15_init-db.sql  udaconnect_public_location.sql  udaconnect_public_person.sql
deployment/: connection-api-svc.yaml  db-secret.yaml  kafka-configmap.yaml  kafka-deploy.yaml  kafka.yaml  location-ingester.yaml  location-server.yaml  person-rpc.yaml  postgres.yaml  uda-connection.yaml  uda-frontend.yaml  uda-person.yaml  udaconnect-api-configmap.yaml  udaconnect-api-location.yaml  udaconnect-api.yaml  udaconnect-app.yaml  udaconnect-configmap.yaml  udaconnect-connection.yaml  udaconnect-location-consumer.yaml  udaconnect-location.yaml  udaconnect-person-consumer.yaml  udaconnect-person.yaml  zk-configmap.yaml  zk-deploy.yaml
docs/: architecture_decisions.md  architecture_decisions.txt  grpc.md  grpc.txt  openapi.yaml  postman.json  system-architecture.md  system-architecture.puml
helm/: Chart.yaml
modules/: docker-compose.yml
modules/api/: .gitignore  Dockerfile  pyproject.toml  requirements.txt
modules/api/app/: config.py
modules/api/app/udaconnect/: controllers.py  models.py  schemas.py  services.py
protobufs/: REAME.md  persons.proto
scripts/: run_db_command.sh
(+129 files in other folders)
